# wootify

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  bale_contacts_dump.json  bale_dialogs_dump.json  dump_bale_contacts.py  dump_bale_dialogs.py  env.py  release_v3.0.0.ps1  release_v4.0.0.ps1  repo-briefing.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_wootify.py  0002_add_instance_proxy_config.py  0003_add_active_conversation_mapping.py  0004_add_bale_enterprise_tables.py  0005_add_link_url_to_enterprise_document_assets.py  0006_add_enterprise_manual_groups.py  (+7 more)
app/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py  runtime_registry.py
bale_grpc_client/: KIMI_INSTRUCTIONS.md  README.md  RESEARCH.md  setup.py
bale_pv_connector/: README.md  pyproject.toml
bale_pv_connector/examples/: auth_and_listen.py
bale_pv_connector/src/bale_pv_connector/: __init__.py  auth_client.py  base_client.py  client.py  dialog_parser.py  exceptions.py  groups_client.py  messaging_client.py  messaging_messages.py  update_parser.py  users_client.py  ws_client.py
bale_pv_connector/tests/: test_auth_messages.py  test_client.py  test_dialog_parser.py  test_messaging_messages.py  test_protobuf_wire.py  test_update_parser.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMMENTING_STANDARD.md  DEVELOPMENT.md
scripts/: migrate_sqlite_to_postgres.py  verify_health_endpoint.py
tests/: conftest.py  test_bale_pv_adapter.py  test_logging_config.py  test_manual_group_listing.py  test_update_parser.py  verify_fixes.py
wootify-instance-manager/: index.html  package-lock.json  package.json  vite.config.js
(+86 files in other folders)
